[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcadedb-python"
version = "0.2.0"
description = "Python driver for ArcadeDB - Multi-Model Database with Graph, Document, Key-Value, Vector, and Time-Series support"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Adams Rosales"},
    {name = "ExtReMLapin"},
    {name = "Steve Reiner"},
]
maintainers = [
    {name = "Steve Reiner"},
]
keywords = [
    "arcadedb",
    "database",
    "graph",
    "document",
    "key-value",
    "vector",
    "time-series",
    "multi-model",
    "nosql",
    "python-driver",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "retry>=0.9.2",
]

[project.optional-dependencies]
postgresql = ["psycopg>=3.0.0"]
cypher = ["pygments>=2.0.0"]
full = ["psycopg>=3.0.0", "pygments>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "tox>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/stevereiner/arcadedb-python"
Documentation = "https://docs.arcadedb.com/"
Repository = "https://github.com/stevereiner/arcadedb-python"
"Bug Tracker" = "https://github.com/stevereiner/arcadedb-python/issues"
Changelog = "https://github.com/stevereiner/arcadedb-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "arcadedb_python/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["arcadedb_python"]

[tool.hatch.version]
path = "arcadedb_python/__init__.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["arcadedb_python"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
